--- a/CSS/index.css
+++ b/CSS/index.css
@@ -107,7 +107,9 @@ h3 {
 }
 
 
-#sobre, #produtos, #contato {
+#sobre,
+#produtos,
+#contato {
     padding: 20px 0;
     text-align: center;
 }
@@ -166,6 +168,7 @@ h3 {
     from {
         transform: translateX(0);
     }
+
     to {
         transform: translateX(-100%);
     }
@@ -213,7 +216,7 @@ h3 {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
-.btn{
+.btn {
     transition: background-color 0.3s;
 }
 
@@ -249,10 +252,10 @@ h3 {
     margin-bottom: 10px;
 }
 
-.contato img{
-    width: 30%; 
-    height: auto; 
-    margin-right: 10px; 
+.contato img {
+    width: 30%;
+    height: auto;
+    margin-right: 10px;
 }
 
 .contato ul {
@@ -266,7 +269,7 @@ h3 {
     list-style: none;
     font-size: 1.0rem;
     color: #003399;
-    
+
 }
 
 .contato a {
@@ -291,7 +294,7 @@ h3 {
     margin: 10px;
 }
 
-.button:hover{
+.button:hover {
     background-color: #003399;
 }
 
@@ -338,14 +341,16 @@ section {
 
 /* Estilos para a Modal */
 .modal {
-    display: none; 
+    display: none;
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.8); /* Fundo escurecido */
-    backdrop-filter: blur(5px); /* Desfoque do fundo */
+    background: rgba(0, 0, 0, 0.8);
+    /* Fundo escurecido */
+    backdrop-filter: blur(5px);
+    /* Desfoque do fundo */
     justify-content: center;
     align-items: center;
     z-index: 10;
@@ -367,7 +372,9 @@ section {
     border-radius: 10px;
 }
 
-.close, .prev, .next {
+.close,
+.prev,
+.next {
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
