--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1,401 +1,573 @@
 /* Reset de estilos */
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Helvetica Neue', Arial, sans-serif;
 }
 
 body {
-    background-color: #f4f4f4;
-    color: #333;
+  background-color: #f8f9fa;
+  color: #343a40;
 }
 
 .container {
-    width: 90%;
-    max-width: 1200px;
-    margin: 0 auto;
+  width: 90%;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 20px;
 }
 
 header {
-    background-image: linear-gradient(to bottom, #003399, #023fb8, #0551e7);
-    padding: 10px 0;
-    color: white;
+  background-image: linear-gradient(to right, #0069d9, #007bff, #0069d9);
+  padding: 20px 0;
+  color: white;
 }
 
 header h1 {
-    text-align: center;
-    font-size: 2.5rem;
-    margin-bottom: 5px;
+  text-align: center;
+  font-size: 3rem;
+  margin-bottom: 10px;
+}
+
+header div a {
+  text-decoration: none;
+  display: contents;
+  color: white;
 }
 
 nav ul {
-    list-style: none;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    gap: 20px;
-    margin-top: 10px;
+  list-style: none;
+  text-align: center;
+  margin-top: 10px;
+}
+
+nav ul li {
+  display: inline-block;
+  margin: 0 15px;
+  width: 14%;
+  height: 30px;
+  padding: 5px;
+}
+
+nav ul li:hover {
+  background-color: #003399;
+  border-radius: 5px;
+  text-align: center;
 }
 
 nav ul li a {
-    color: white;
-    text-decoration: none;
-    font-size: 1.1rem;
-    font-weight: bold;
-    padding: 10px 20px;
-}
-
-nav ul li a:hover {
-    background-color: #003399;
-    width: 100%;
+  color: white;
+  text-decoration: none;
+  font-size: 1.1rem;
+  font-weight: bold;
 }
 
 h3 {
-    font-size: 1.8rem;
-    color: #002266;
-    margin-bottom: 20px;
+  font-size: 2rem;
+  color: #0069d9;
+  margin-bottom: 20px;
 }
 
-
-.titulo a {
-    display: flex;
-    align-items: center;
-    margin-right: auto;
-    justify-content: center;
-    text-decoration: none;
-    color: white;
+.titulo {
+  display: flex;
+  align-items: center;
+  margin-right: auto;
+  justify-content: center;
+  text-decoration: none;
+  color: white;
 }
 
 .logo {
-    width: 50px;
-    height: auto;
-    margin-right: 10px;
+  width: 60px;
+  height: auto;
+  margin-right: 15px;
 }
 
 #banner {
-    background-color: #0066ff;
-    color: white;
-    padding: 60px 0;
-    text-align: center;
-    margin-top: 0;
+  /* background-color: #007bff; */
+  background-image: url('file:///C:/Users/ALUNO/Documents/Lucas%20Lopes/aula25-10/loja-materiais/img/identidade/faixadagpt.png');
+  background-size: cover;
+  /* Cobre todo o container */
+  background-position: center;
+  /* Centraliza a imagem */
+  background-repeat: no-repeat;
+  /* Evita repetição */
+  color: white;
+  padding: 80px 0;
+  text-align: center;
+  margin-top: 0;
+  border-radius: 0;
+  position: relative;
 }
 
+#banner::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  z-index: 1;
+}
+
+#banner h2,
+#banner p,
+#banner a {
+  position: relative;
+  z-index: 2;
+}
+
+
 #banner h2 {
-    font-size: 2.4rem;
-    font-weight: bold;
-    margin-bottom: 10px;
+  font-size: 3rem;
+  font-weight: bold;
+  margin-bottom: 20px;
 }
 
 #banner p {
-    font-size: 1.2rem;
-    margin-bottom: 20px;
+  font-size: 1.5rem;
+  margin-bottom: 30px;
 }
 
 #banner .btn {
-    background-color: #003399;
-    color: white;
-    padding: 10px 20px;
-    text-decoration: none;
-    font-size: 1.1rem;
-    border-radius: 5px;
-    transition: background-color 0.3s;
+  background-color: #0056b3;
+  color: white;
+  padding: 15px 30px;
+  text-decoration: none;
+  font-size: 1.2rem;
+  border-radius: 8px;
+  transition: background-color 0.3s;
 }
 
 #banner .btn:hover {
-    background-color: #001b4d;
+  background-color: #004085;
 }
-
 
 #sobre,
 #produtos,
 #contato {
-    padding: 20px 0;
-    text-align: center;
+  padding: 40px 0;
+  text-align: center;
+}
+
+#contato {
+  padding: 0;
+}
+
+#sobre {
+  padding: 60px 20px;
+  background-color: #f8f9fa;
+  /* Cor de fundo suave para destacar o conteúdo */
+  color: #333;
+  text-align: center;
+}
+
+#sobre .container {
+  max-width: 800px;
+  margin: 0 auto;
+}
+
+
+
+#sobre p {
+  font-size: 1.1em;
+  line-height: 1.6;
+  margin-bottom: 20px;
 }
 
 
 #catalogos h3 {
-    font-size: 2rem;
-    text-align: center;
-    margin-bottom: 20px;
+  font-size: 2.5rem;
+  text-align: center;
+  margin-bottom: 30px;
 }
 
 .container-catalogos {
-    width: 100%;
-    overflow: hidden;
+  width: 100%;
+  overflow: hidden;
 }
-
-.catalogo {
-    width: 100%;
-    position: relative;
-}
-
 
 .catalogos-grid {
-    display: flex;
-    overflow: visible;
-    width: 100%;
-    animation: rotate 10s linear infinite;
-    margin: 20px;
-    margin-left: 0;
-    padding: 0;
-    border-radius: 4px;
+  display: flex;
+  overflow: visible;
+  width: 100%;
+  animation: rotate 10s linear infinite;
+  margin: 30px 0;
+  border-radius: 8px;
 }
 
-
 .catalogo {
-    flex: 0 0 16.67%;
-    padding: 5px;
-
+  flex: 0 0 16.67%;
+  padding: 10px;
 }
 
 .catalogo img {
-    width: 100%;
-    border-radius: 10px;
-    transition: transform 0.3s ease;
-    cursor: pointer;
+  width: 100%;
+  border-radius: 10px;
+  transition: transform 0.3s ease;
+  cursor: pointer;
 }
 
 .catalogo img:hover {
-    transform: scale(1.1);
-    position: absolute;
-    z-index: 1;
-    border: 2px solid white;
+  transform: scale(1.1);
+  position: relative;
+  z-index: 1;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
 }
 
 @keyframes rotate {
-    from {
-        transform: translateX(0);
-    }
+  from {
+    transform: translateX(0);
+  }
 
-    to {
-        transform: translateX(-100%);
-    }
+  to {
+    transform: translateX(-100%);
+  }
 }
 
-/* Ao passar o mouse sobre a área, a rotação para */
 .catalogos-grid:hover {
-    animation-play-state: paused;
+  animation-play-state: paused;
 }
 
 .catalogo h4 {
-    margin-top: 10px;
-    color: #003399;
+  margin-top: 15px;
+  color: #0069d9;
+  font-size: 1.2rem;
 }
 
 #produtos {
-    padding: 40px 0;
-    background-color: #f9f9f9;
-}
-
-.container-produtos {
-    width: 100%;
+  background-color: #f1f1f1;
 }
 
 #produtos h3 {
-    text-align: center;
-    margin-bottom: 20px;
-    font-size: 2rem;
+  text-align: center;
+  margin-bottom: 30px;
+  font-size: 2.5rem;
+}
+
+.container-produtos {
+  margin: 0 20px;
 }
 
 .produtos-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-    gap: 20px;
-    margin: 20px;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
+  gap: 30px;
+  margin: 30px 0;
 }
 
 .produto {
-    background-color: #fff;
-    border: 1px solid #ddd;
-    border-radius: 8px;
-    overflow: hidden;
-    text-align: center;
-    transition: transform 0.3s;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-}
-
-.btn {
-    transition: background-color 0.3s;
+  background-color: white;
+  border: 1px solid #ddd;
+  border-radius: 10px;
+  overflow: hidden;
+  text-align: center;
+  transition: transform 0.3s, box-shadow 0.3s;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .produto:hover {
-    transform: scale(1.05);
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+  transform: scale(1.05);
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
 }
 
 .produto img {
-    width: 100%;
-    border-bottom: 1px solid #ddd;
+  width: 100%;
+  border-bottom: 1px solid #ddd;
 }
 
 .produto h4 {
-    padding: 10px;
-    font-size: 1.1rem;
-    color: #333;
+  padding: 15px;
+  font-size: 1.2rem;
+  color: #333;
 }
 
 .produto p {
-    font-size: 1rem;
-    color: #555;
-    padding: 10px;
-    font-weight: bold;
-    color: #003399;
+  font-size: 1.1rem;
+  color: #0069d9;
+  padding: 15px;
+  font-weight: bold;
 }
 
-
 .contato {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin-bottom: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 20px;
+  background-image: linear-gradient(to right, #0069d9, #007bff, #0069d9);
+  border-radius: 11px;
 }
 
 .contato img {
-    width: 30%;
-    height: auto;
-    margin-right: 10px;
+  width: 30%;
+  height: auto;
+  margin-right: 20px;
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
 }
 
 .contato ul {
-    text-align: end;
-    padding: 0;
-    margin: 0;
+  text-align: end;
+  padding: 0;
+  margin: 0;
+  padding-right: 10px;
 }
 
 .contato li {
-    margin: 5px 0;
-    list-style: none;
-    font-size: 1.0rem;
-    color: #003399;
-
+  margin: 8px 0;
+  list-style: none;
+  font-size: 1.1rem;
+  color: #002266;
 }
 
 .contato a {
-    text-decoration: none;
-    color: #007BFF;
+  text-decoration: none;
+  color: white;
 }
 
 .contato a:hover {
-    text-decoration: underline;
+  text-decoration: underline;
+}
+
+#contato iframe {
+  width: 100%;
+  height: 100vh;
+  padding-bottom: 40px;
 }
 
 .button {
-    background-color: #007BFF;
-    border: none;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    border-radius: 4px;
-    margin: 10px;
+  background-color: #007BFF;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  border-radius: 8px;
+  margin: 15px;
+  transition: background-color 0.3s;
 }
 
 .button:hover {
-    background-color: #003399;
+  background-color: #0056b3;
 }
 
-
 footer {
-    background-color: #002266;
-    color: white;
-    padding: 20px 0;
-    text-align: center;
+  background-color: #002266;
+  color: white;
+  padding: 30px 0;
+  text-align: center;
 }
 
 footer p {
-    margin-top: 10px;
-    font-size: 1rem;
+  margin-top: 15px;
+  font-size: 1.1rem;
 }
 
 section {
-    margin: 20px 0;
-    padding: 20px;
-    background: #ffffff;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  margin: 30px 0;
+  padding: 30px;
+  background: #ffffff;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
 }
 
 
 /* Responsividade */
 @media (max-width: 768px) {
-    #banner h2 {
-        font-size: 1.8rem;
-    }
+  #banner h2 {
+    font-size: 2.2rem;
+  }
 
-    #banner p {
-        font-size: 1rem;
-    }
+  #banner p {
+    font-size: 1.2rem;
+  }
 
-    nav ul {
-        flex-direction: column;
-    }
+  nav ul {
+    flex-direction: column;
+    gap: 15px;
+  }
 
-    .container {
-        width: 100%;
-        padding: 0 15px;
-    }
+  .container {
+    width: 100%;
+    padding: 0 20px;
+  }
 }
 
 /* Estilos para a Modal */
 .modal {
-    display: none;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.8);
-    /* Fundo escurecido */
-    backdrop-filter: blur(5px);
-    /* Desfoque do fundo */
-    justify-content: center;
-    align-items: center;
-    z-index: 10;
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.8);
+  backdrop-filter: blur(5px);
+  justify-content: center;
+  align-items: center;
+  z-index: 10;
 }
 
 .modal-content {
-    display: flex;
-    position: relative;
-    max-width: 80%;
-    max-height: 80%;
-    padding: 10px;
-    align-items: center;
-    justify-content: center;
+  display: flex;
+  position: relative;
+  max-width: 80%;
+  max-height: 80%;
+  padding: 20px;
+  align-items: center;
+  justify-content: center;
 }
 
 .modal-content img {
-    width: 60%;
-    height: auto;
-    border-radius: 10px;
+  width: 60%;
+  height: auto;
+  border-radius: 10px;
 }
 
 .close,
 .prev,
 .next {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    background: rgba(255, 255, 255, 0.6);
-    border: none;
-    padding: 10px;
-    cursor: pointer;
-    font-size: 18px;
-    color: black;
-    border-radius: 5px;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  background: rgba(255, 255, 255, 0.6);
+  border: none;
+  padding: 15px;
+  cursor: pointer;
+  font-size: 20px;
+  color: black;
+  border-radius: 8px;
+  transition: background-color 0.3s;
+}
+
+.close:hover,
+.prev:hover,
+.next:hover {
+  background-color: rgba(255, 255, 255, 0.8);
 }
 
 .close {
-    top: 10px;
-    right: 10px;
+  top: 20px;
+  right: 20px;
 }
 
 .prev {
-    left: 10px;
+  left: 20px;
 }
 
 .next {
-    right: 10px;
+  right: 20px;
+}
+
+
+/* ########## TESTE ########## */
+
+#sobre-gse {
+  padding: 60px 20px;
+  background-color: #f8f9fa;
+  color: #333;
+}
+
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+.sobre-gse-content {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  gap: 40px;
+}
+
+.sobre-gse-texto {
+  flex: 1;
+  max-width: 600px;
+}
+
+.sobre-gse-imagem {
+  flex: 1;
+  max-width: 600px;
+}
+
+.sobre-gse-imagem img {
+  width: 100%;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+#sobre-gse h2 {
+  font-size: 2em;
+  color: #007bff;
+  margin-bottom: 20px;
+}
+
+#sobre-gse p {
+  font-size: 1.1em;
+  line-height: 1.6;
+  margin-bottom: 20px;
+}
+
+.sobre-gse-lista {
+  list-style: none;
+  padding: 0;
+  margin-bottom: 20px;
+}
+
+.sobre-gse-lista li {
+  font-size: 1em;
+  margin-bottom: 10px;
+}
+
+.sobre-gse-lista i {
+  color: #007bff;
+  margin-right: 10px;
+}
+
+.btn-cta {
+  display: inline-block;
+  background-color: #007bff;
+  color: #fff;
+  padding: 10px 20px;
+  text-decoration: none;
+  border-radius: 5px;
+  transition: background-color 0.3s;
+  padding: 10px 20px;
+}
+
+.btn-cta:hover {
+  background-color: #0056b3;
+}
+
+.arrow {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  cursor: pointer;
+  transition: opacity 0.3s, transform 0.3s;
+  opacity: 0;
+  z-index: 1000;
+  background-color: #0056b3;
+  color: #fff;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.4);
+  font-size: 24px;
+}
+
+.arrow.visible {
+  opacity: 1;
+  transform: translateY(0);
+}
+
+.arrow:not(.visible) {
+  transform: translateY(10px);
 }
