--- a/views/contato.html
+++ b/views/contato.html
@@ -1,22 +1,52 @@
-
-<head>
-    <link rel="stylesheet" href="../CSS/index.css">
-</head>
+<link rel="stylesheet" href="../CSS/index.css">
 <div class="container">
     <h3>Contato</h3>
     <div class="contato">
         <img src="../img/identidade/gsesolucoeslogo-melhorada.png" alt="Logo GSE Soluções">
-        <ul>
-            <li><strong>Email: </strong><a href="mailto:lucas9360@gmail.com" target="_blank">gsesolucoes@mail.com</a></li>
-            <li><strong>Telefone: </strong><a href="tel:(99)999999999" target="_blank">(61)99872-2375</a></li>
-            <li><strong>Instagram: </strong><a href="https://www.instagram.com/gsesolucoeslza/" target="_blank" >@gsesolucoeslza</a></li>
-        </ul>
+        <div class="icons">
+            <div class="icon">
+                <a href="mailto:gsesolucoes@mail.com" target="_blank">
+                    <div class="box">
+                        <img src="../img/icons/mail.svg" alt="e-mail">
+                    </div>
+                </a>
+                <a href="gsesolucoes@mail.com" target="_blank">
+                    <p class="contato-text">E-mail</p>
+                </a>
+                <a href="mailto:gsesolucoes@mail.com" target="_blank">
+                    <p>gsesolucoes@mail.com</p>
+                </a>
+            </div>
+            <div class="icon">
+                <a href="https://api.whatsapp.com/send?phone=5561998722375" target="_blank">
+                    <div class="box">
+                        <img src="../img/icons/phone.svg" alt="telefone">
+                    </div>
+                </a>
+                <a href="https://api.whatsapp.com/send?phone=5561998722375" target="_blank">
+                    <p class="contato-text">Telefone</p>
+                </a>
+                <a href="https://api.whatsapp.com/send?phone=5561998722375" target="_blank">
+                    <p>(61)99872-2375</p>
+                </a>
+            </div>
+            <div class="icon">
+                <a href="https://www.instagram.com/gsesolucoeslza/" target="_blank">
+                    <div class="box">
+                        <img src="../img/icons/instagram.svg" alt="instagram">
+                    </div>
+                </a>
+                <a href="https://www.instagram.com/gsesolucoeslza/" target="_blank">
+                    <p class="contato-text">Instagram</p>
+                </a>
+                <a href="https://www.instagram.com/gsesolucoeslza/" target="_blank">
+                    <p>@gsesolucoeslza</p>
+                </a>
+            </div>
+        </div>
     </div>
     <h4 style="text-align: left;">Localização: </h4>
     <p style="text-align: left;">Avenida Sérgio Buarque de Holanda, Qd. 192, lote 11, loja 03, Parque Estrela
         Dalva III, Luziânia, Goias, Brazil 72831120</p>
-    <iframe
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15322.38293027716!2d-47.91600563684751!3d-16.241210101413852!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9359979935708367%3A0x641567211c481642!2sParque%20Estrela%20Dalva%20III%2C%20Luzi%C3%A2nia%20-%20GO!5e0!3m2!1spt-BR!2sbr!4v1730291887302!5m2!1spt-BR!2sbr"
-        width="100%" height="350px" style="border:0;" allowfullscreen="" loading="lazy"
-        referrerpolicy="no-referrer-when-downgrade"></iframe>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3830.5432083545948!2d-47.90737072404158!3d-16.243906784461213!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x93599b2af480dd2f%3A0x94f5b139ba5505c6!2zR1NFIFNvbHXDp8O1ZXM!5e0!3m2!1spt-BR!2sbr!4v1732281016819!5m2!1spt-BR!2sbr" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 </div>
