--- a/CSS/index.css
+++ b/CSS/index.css
@@ -874,3 +874,61 @@ nav ul li a {
   margin: 0 5px;
   cursor: pointer;
 }
+
+
+/* .user.info {
+  position: absolute;
+  margin-top: 0px;
+  top: 10px;
+  right: 10px;
+}
+
+.btn-login {
+  display: flex;
+  background-color: #fff;
+  color: #007BFF;
+  padding: 10px 20px;
+  text-decoration: none;
+  border-radius: 5px;
+  font-size: 16px;
+  transition: background-color 0.3s;
+  font-weight: bold;
+}
+
+.btn-login:hover {
+  background-color: #0056b3;
+  color: #fff;
+} */
+
+
+/* Estilo para os botões de login/logout */
+.user-info {
+  display: flex;
+  align-items: center;
+  position: absolute;
+  right: 10px;
+  top: 10px;
+}
+
+#username-display {
+  margin-right: 10px;
+  font-weight: bold;
+}
+
+#login-btn, #logout-btn {
+  padding: 8px 16px;
+  margin-left: 10px;
+  font-size: 14px;
+  background-color: #fff;
+  color: #007BFF;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-weight: bold;
+  transition: background-color 0.3s;
+}
+
+#login-btn:hover, #logout-btn:hover {
+  background-color: #0056b3;
+  color: #fff;
+}
