--- a/views/produto.html
+++ b/views/produto.html
@@ -13,41 +13,20 @@
         <a href="../produtos.html" class="btn button">Ver Mais...</a>
     </div>
 <script>
-    const itemsPerPage = 10;
+const itemsPerPage = 10;
 let currentPage = 1;
 // Lista dos produtos
-const produtos = [
-    { img: "../img/produtos/caixa-dagua.png", name: "Caixa D'Água", price: 150.30 },
-    { img: "../img/produtos/bombadagua.png", name: "Bomba D'Água", price: 220.00 },
-    { img: "../img/produtos/cano-pvc.png", name: "Cano PVC", price: 12.50 },
-    { img: "../img/produtos/boia.png", name: "Boia", price: 35.00 },
-    { img: "../img/produtos/caixa-dagua-tamanhos.png", name: "Caixa D'Água vários tamanhos", price: 300.00 },
-    { img: "../img/produtos/caixa-ferramentas.png", name: "Caixa de Ferramentas", price: 85.00 },
-    { img: "../img/produtos/ducha-higienica.png", name: "Ducha Higiênica", price: 45.00 },
-    { img: "../img/produtos/espuma.png", name: "Espuma", price: 10.00 },
-    { img: "../img/produtos/interruptor-verde.png", name: "Interruptor Verde", price: 15.00 },
-    { img: "../img/produtos/interruptor.png", name: "Interruptor", price: 12.00 },
-    { img: "../img/produtos/lampada.png", name: "Lâmpada", price: 20.00 },
-    { img: "../img/produtos/luminaria.png", name: "Luminária", price: 50.00 },
-    { img: "../img/produtos/mangueira.png", name: "Mangueira", price: 60.00 },
-    { img: "../img/produtos/mascara.png", name: "Máscara", price: 8.00 },
-    { img: "../img/produtos/rebitadeira.png", name: "Rebitadeira", price: 120.00 },
-    { img: "../img/produtos/sensor-movimento.png", name: "Sensor de Movimento", price: 90.00 },
-    { img: "../img/produtos/tampa-de-vaso.png", name: "Tampa de Vaso", price: 25.00 },
-    { img: "../img/produtos/tinta-spray.png", name: "Tinta Spray", price: 35.00 },
-    { img: "../img/produtos/tinta.jpeg", name: "Tinta", price: 45.00 },
-    { img: "../img/produtos/tinta1.png", name: "Tinta Tipo 1", price: 50.00 },
-    { img: "../img/produtos/tinta2.png", name: "Tinta Tipo 2", price: 55.00 },
-    { img: "../img/produtos/tinta3.png", name: "Tinta Tipo 3", price: 60.00 },
-    { img: "../img/produtos/tinta4.png", name: "Tinta Tipo 4", price: 65.00 },
-    { img: "../img/produtos/trena.png", name: "Trena", price: 30.00 },
-    { img: "../img/produtos/vedalit.png", name: "Vedalit", price: 18.00 },
-];
+
+function getProductsFromLocalStorage() {
+    return JSON.parse(localStorage.getItem('products')) || [];
+}
 
 function searchProducts() {
 
     const searchTerm = document.getElementById("search-bar").value.toLowerCase();
     const products = document.getElementsByClassName("produto");
+    // const products = getProductsFromLocalStorage();
+    console.log(products);
 
     Array.from(products).forEach((product) => {
         const productName = removeAccentuation(product.querySelector("h4").textContent.toLowerCase());
@@ -65,6 +44,7 @@ function removeAccentuation(text) {
 }
 
 function displayProducts(page) {
+    const produtos = getProductsFromLocalStorage();
     const startIndex = (page - 1) * itemsPerPage;
     const endIndex = page * itemsPerPage;
     const productsToDisplay = produtos.slice(startIndex, endIndex);
@@ -76,15 +56,16 @@ function displayProducts(page) {
         const productDiv = document.createElement('div');
         productDiv.classList.add('produto');
         productDiv.innerHTML = `
-            <img src="${produto.img}" alt="${produto.name}">
+            <img src="../img/produtos/${produto.image}" alt="${produto.name}">
             <h4>${produto.name}</h4>
-            <p>R$ ${produto.price.toFixed(2)}</p>
+            <p>R$ ${produto.price}</p>
         `;
         produtosGrid.appendChild(productDiv);
     });
 }
 
 function generatePagination() {
+    const produtos = getProductsFromLocalStorage();
     const totalPages = Math.ceil(produtos.length / itemsPerPage);
     const paginationDiv = document.getElementById('pagination');
     paginationDiv.innerHTML = '';
