--- a/CSS/admin.css
+++ b/CSS/admin.css
@@ -47,8 +47,8 @@ h2 {
 }
 
 .product-item img {
-    width: 100%;
     max-height: 200px;
+    max-width: 200px;
     object-fit: cover;
     border-radius: 8px;
     margin-bottom: 10px;
